# improc_chain

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  entrypoint.sh  nodelet_plugin.xml  package.xml
config/: Bilateral.cfg  CannyEdge.cfg  Dilation.cfg  Erosion.cfg  FilterType.cfg  GammaCorrection.cfg  Gaussian.cfg
include/image_proc_chain/: chain.hpp  chain_piece.hpp  chain_processor.hpp  component_manager.hpp  dynamic_changable_filter.hpp  factory.hpp  flexible_chain_executor.hpp  i_filter.hpp  i_processor.hpp  image_processors.hpp  io.hpp  node.hpp  nodelet.hpp  processor_factory.hpp  reconfiguable_filters.hpp  reconfigurable_processors.hpp  switchable_image_processor.hpp
include/image_proc_chain/deprecated/: chain.hpp  changable_processor.hpp
launch/: as_node.launch  chain_filter.launch  chain_process.launch  chain_processor.launch.py  image_proc_chain.launch.py  sinble_process.launch
src/image_proc_chain/: bilateral.cpp  canny_edge.cpp  chain.cpp  chain_node.cpp  chain_piece.cpp  chain_piece_node.cpp  chain_processor.cpp  chain_processor_node.cpp  changable_processor.cpp  component_container.cpp  component_manager.cpp  dilation.cpp  dynamic_changable_filter.cpp  erosion.cpp  factory.cpp  flexible_chain_executor.cpp  gamma_correction.cpp  gaussian.cpp  image_processors.cpp  io.cpp  io_node.cpp  node.cpp  nodelet.cpp  pass_through.cpp  processor_factory.cpp  switchable_image_processor.cpp
src/image_proc_chain/deprecated/: bilateral.cpp  chain_node.cpp  changable_processor.cpp  gamma_correction.cpp  gaussian.cpp  processor_factory.cpp
srv/: ChangeChainNum.srv  FilterType.srv  SwitchProcessorType.srv
