<?xml version="1.0"?>
<package format="2">
  <name>image_proc_chain</name>
  <version>2.0.0</version>
  <description>Way to validate result of image process every step</description>

  <author>Fukukazu Kawata</author>
  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/fugashy</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
