<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_proc_chain</name>
  <version>2.0.0</version>
  <description>Way to validate result of image process every step</description>

  <maintainer email="fugashy@icloud.com">fugashy</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/fugashy</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_proc_chain_msgs</depend>


  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
